package com.ylkget.pattern.factory.simplefactory.pizzastore.pizza;

/**
 * <p>
 *
 * </p>
 *
 * @author joe 2021/3/28 10:15
 */
public class CheesePizza extends Pizza {
    @Override
    public void prepare() {
        // TODO Auto-generated method stub
        System.out.println(" 给制作奶酪披萨 准备原材料 ");
    }
}
